tooling/nargo_cli/tests/snapshots/execution_failure/unused_array_get_known_index_out_of_bounds/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 10 is out of bounds for the array of length 3
  ┌─ src/main.nr:3:13
  │
3 │     let _ = array[10]; // Index out of bounds
  │             ---------
  │

Error interpreting main function
